Update to new board

--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -17,7 +17,7 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-[env:megaatmega1280]
+[env:protrinket5]
 platform = atmelavr
+board = protrinket5
 framework = arduino
-board = megaatmega1280
