--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -17,7 +17,12 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-[env:protrinket5]
-platform = atmelavr
-board = protrinket5
+#[env:protrinket5]
+#platform = atmelavr
+#board = protrinket5
+#framework = arduino
+
+[env:teensy31]
+platform = teensy
+board = teensy31
 framework = arduino
