--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -26,3 +26,13 @@
 platform = teensy
 board = teensy31
 framework = arduino
+
+#[env:diecimilaatmega328]
+#platform = atmelavr
+#board = diecimilaatmega328
+#framework = arduino
+
+#[env:pro16MHzatmega328]
+#platform = atmelavr
+#board = pro16MHzatmega328
+#framework = arduino
