--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -22,17 +22,22 @@
 #board = protrinket5
 #framework = arduino
 
-[env:teensy31]
-platform = teensy
-board = teensy31
-framework = arduino
+#[env:teensy31]
+#platform = teensy
+#board = teensy31
+#framework = arduino
 
 #[env:diecimilaatmega328]
 #platform = atmelavr
 #board = diecimilaatmega328
 #framework = arduino
 
-#[env:pro16MHzatmega328]
-#platform = atmelavr
-#board = pro16MHzatmega328
-#framework = arduino
+[env:pro16MHzatmega328]
+platform = atmelavr
+board = pro16MHzatmega328
+framework = arduino
+lib_deps =
+    126
+platform_packages =
+  ; use GCC AVR 7.3.0+
+  toolchain-atmelavr@>=1.70300.0
